--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
   <title>Redmi 10a</title>
   <link href="./assets/css/main.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link type="text/css" href="./assets/css/slick.css" rel="stylesheet"/>
+  <script src="./assets/js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -242,7 +242,8 @@ Amor à primeira vista</span>
     <span data-key="overview_55" class="xm-text overview_53" data-type="text" data-id="aj6y2mtyhl">FM radio*</span>
     </div>
     <div>
-    <div class="icon_wrap"><img class="icon2 lazy" data-id="cw8e8jrz53" src="./assets/media/p26.png" /></div><span data-key="overview_56" class="xm-text overview_54" data-type="text" data-id="38x8rdik23">Alto-falante poderoso</span>
+    <div class="icon_wrap"><img class="icon2 lazy" data-id="cw8e8jrz53" src="./assets/media/p26.png" /></div>
+    <span data-key="overview_56" class="xm-text overview_54" data-type="text" data-id="38x8rdik23">Alto-falante poderoso</span>
     </div>
     <div>
     <div class="icon_wrap"><img class="icon3 lazy" data-id="7x6jexs4i8" src="./assets/media/p27.png" /></div>
@@ -251,7 +252,7 @@ Amor à primeira vista</span>
     </div>
     </div>
 
-    <div class="section section15 lazy" data-type="bg" data-id="2n4pbuj7gg" data-background-image="//i02.appmifile.com/mi-com-product/images/redmi-10a/pc/p25.png" style="background-image: url(./assets/media/p25.png);">
+    <div class="section section15 lazy" data-type="bg" data-id="2n4pbuj7gg" data-background-image="./assets/media/p25.png" style="background-image: url(./assets/media/p25.png);">
     <a class="xm-link overview_57 f72 f-bold" href="#" data-type="button" data-id="1g6dz3xx63" target="_self">Compre agora!</a>
     </div>
 
