--- a/mob/index.html
+++ b/mob/index.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <title>Redmi 10A | Xiaomi Global</title>
 
-<link href="https://s05.appmifile.com/sgp/spps_files/product/2.8.5/mobile_v4/redmi-10a/css/public.chunk.css" rel="stylesheet">
 <link href="https://s05.appmifile.com/sgp/spps_files/product/2.8.5/mobile_v4/redmi-10a/css/main.css" rel="stylesheet">
 
 <script>!function (e, t) { var i = t.documentElement; function n() { var t = i.clientWidth || 320, n = (t > 720 ? 720 : t < 320 ? 320 : t) / 22.5; i.style.fontSize = n + "px", e.rootFontSize = n } if (e.oriRootFontSize = 48, e.addEventListener("resize", (function () { n() }), !1), e.addEventListener("pageshow", (function (e) { e.persisted && n() }), !1), n(), e.devicePixelRatio && e.devicePixelRatio >= 2) { var o = t.createElement("div"), d = t.createElement("body"); o.style.border = "0.5px solid transparent", d.appendChild(o), i.appendChild(d), 1 === o.offsetHeight && i.classList.add("hairlines"), i.removeChild(d) } }(window, document)</script>
@@ -15,7 +14,7 @@
 
 <body>
 <div class="overview-con-global">
-<div class="section section01 lazy" data-type="bg" data-id="jyoa3egmh2" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m1.png">
+<div class="section section01 lazy" data-type="bg" data-id="jyoa3egmh2" style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m1.png)">
 <div class="section01_content">
 <img alt="" class="xm-img logo lazy" data-id="vmlublta23" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m2.png"/>
 <span data-key="ksp_1" class="xm-text ksp_1 f60 f-regular" data-type="text" data-id="7yn2lbos1n">Câmera dupla de até 13MP</span>
@@ -24,21 +23,21 @@
 
 <div class="section section02 lazy" data-type="bg" data-id="o3hwh9p6g4" data-background-image="">
 <div class="section02_left">
-<div class="section section02_01 lazy" data-type="bg" data-id="buov7haa4t" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k1.png">
+<div class="section section02_01 lazy" data-type="bg" data-id="buov7haa4t" style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k1.png)">
 <span data-key="ksp_12" class="xm-text ksp_12 f56 f-bold" data-type="text" data-id="kyfqeqzqrs">MediaTek Helio G25</span>
 <span data-key="ksp_13" class="xm-text ksp_13 f36 f-regular" data-type="text" data-id="5dfeu1n17n">Processador Octa-core de até 2,0GHz</span></div>
-<div class="section section02_02 lazy" data-type="bg" data-id="4vn6y22s2i" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k2.png">
+<div class="section section02_02 lazy" data-type="bg" data-id="4vn6y22s2i"  style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k2.png)">
 <span data-key="ksp_5" class="xm-text ksp_5 f36 f-regular" data-type="text" data-id="nxtukaqgp7">Rear fingerprint sensor</span></div>
-<div class="section section02_03 lazy" data-type="bg" data-id="vpqphk2hwz" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k3.png">
+<div class="section section02_03 lazy" data-type="bg" data-id="vpqphk2hwz" style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k3.png)">
 <span data-key="ksp_3" class="xm-text ksp_3 f36 f-bold" data-type="text" data-id="58kebjvmug">Tela de 6,53"</span>
 <span data-key="ksp_4" class="xm-text ksp_4 f36 f-regular" data-type="text" data-id="r3swbz48ip">Dot Drop</span></div>
 </div>
 
 <div class="section02_right">
-<div class="section section02_04 lazy" data-type="bg" data-id="oz3xwdzxx2" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k4.png">
+<div class="section section02_04 lazy" data-type="bg" data-id="oz3xwdzxx2"  style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k4.png)">
 <span data-key="ksp_10" class="xm-text ksp_10 f36 f-bold" data-type="text" data-id="a350l0rnmq">5000mAh (typ)</span>
 <span data-key="ksp_11" class="xm-text ksp_11 f36 f-regular" data-type="text" data-id="lyzk2bdn38">Bateria de alta capacidade</span></div>
-<div class="section section02_05 lazy" data-type="bg" data-id="avpf1ginln" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k5.png">
+<div class="section section02_05 lazy" data-type="bg" data-id="avpf1ginln"  style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/k5.png)">
 <div>
 <span data-key="ksp_6" class="xm-text ksp_6 f36 f-bold" data-type="text" data-id="w53pkn1a0s">13MP</span>
 <span data-key="ksp_7" class="xm-text ksp_7 f36 f-regular" data-type="text" data-id="fd1gbbti5u">câmera dupla</span>
@@ -50,7 +49,7 @@
 </div>
 </div>
 
-<div class="section section03 lazy" data-type="bg" data-id="afzon0lrc5" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m3.png">
+<div class="section section03 lazy" data-type="bg" data-id="afzon0lrc5"  style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m3.png)">
 <div class="section03_section">
 <span data-key="overview_1" class="xm-text overview_1 f72 f-bold" data-type="text" data-id="ugy71uiluw">Tela 6,53" Dot Drop</span>
 <span data-key="overview_2" class="xm-text overview_2 f40 f-regular" data-type="text" data-id="utju64dfjq">Dê vida aos seus filmes favoritos em uma tela grande HD+ de 6,53".</span>
@@ -85,7 +84,7 @@
 <span data-key="overview_5" class="xm-text overview_5 f36 f-light" data-type="text" data-id="gwldrxl91q">*Testado pelo Xiaomi Internal Labs com base no uso moderado.</span>
 </div>
 
-<div class="section section05 lazy" data-type="bg" data-id="879b9glxut" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m9.png">
+<div class="section section05 lazy" data-type="bg" data-id="879b9glxut"  style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m9.png)">
 <div class="section05_top">
 <span data-key="overview_14" class="xm-text overview_14 f72 f-bold" data-type="text" data-id="zatq5sjn5g">Design impactante, amor à primeira vista</span>
 <span data-key="overview_15" class="xm-text overview_15 f40 f-light" data-type="text" data-id="zy447he0qh">Seja único com o design imponente do Redmi 10A.</span>
@@ -97,21 +96,21 @@
 </div>
 </div>
 
-<div class="section section06 lazy" data-type="bg" data-id="b6uvvd5nhl" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m12.png">
+<div class="section section06 lazy" data-type="bg" data-id="b6uvvd5nhl"  style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m12.png)">
 <div class="section06_text">
 <span data-key="overview_18" class="xm-text overview_18 f72 f-bold" data-type="text" data-id="fruxfn7689">Câmera dupla com até 13MP</span>
 <span data-key="overview_19" class="xm-text overview_19 f40 f-regular" data-type="text" data-id="yh0w9q5efx">Fotos incríveis com apenas um toque. Registre seus melhores momentos com a câmera de 13MP e colecione lembranças inesquecíveis.</span>
 </div>
 
 <div class="section06_icon">
-<div><img alt="" class="xm-img icon1 lazy" data-id="zpxv8san95" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m10.png" />
+<div><img alt="" class="xm-img icon1 lazy" data-id="zpxv8san95" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m10.png"/>
 <div><span data-key="overview_20" class="xm-text overview_20 f80 f-bold"
 data-type="text" data-id="3y3wzkdm39">13MP</span>
 <span data-key="overview_21" class="xm-text overview_21 f40 f-regular" data-type="text" data-id="1li6fre1nc">Câmera principal</span></div>
 </div>
 
 <div>
-<img alt="" class="xm-img icon1 lazy" data-id="5lv69jpp6n" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m11logo.png" />
+<img alt="" class="xm-img icon1 lazy" data-id="5lv69jpp6n" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m11logo.png"/>
 <div>
 <span data-key="overview_22" class="xm-text overview_22 f80 f-bold" data-type="text" data-id="9zdaip1uwf">2MP</span>
 <span data-key="overview_23" class="xm-text overview_23 f40 f-regular" data-type="text" data-id="3wpwnboaev">Sensor de profundidade</span>
@@ -129,18 +128,17 @@ data-type="text" data-id="3y3wzkdm39">13MP</span>
 <img alt="" class="xm-img section07_img2 lazy" data-id="lbhs41porf" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m14.png"/>
 </div>
 
-<div class="section section08 lazy" data-type="bg" data-id="bcbjqnb5c5"
-data-background-image="">
+<div class="section section08 lazy" data-type="bg" data-id="bcbjqnb5c5" data-background-image="">
 <div class="section08_text">
 <span data-key="overview_29" class="xm-text overview_28 f72 f-bold" data-type="text" data-id="ct95noecyi">Sensor de impressão digital e desbloqueio facial IA</span>
 <span data-key="overview_28" class="xm-text overview_29 f62 f-bold" data-type="text" data-id="7iw1fm35y9">Acesso rápido e seguro</span>
 <span data-key="overview_30" class="xm-text overview_30 f40 f-light" data-type="text" data-id="wi36kut4yq">Desbloqueie o seu smartphone de forma rápida e segura com apenas um toque ou um olhar.</span>
 </div>
 
-<img alt="" class="xm-img section08_img lazy" data-id="2vafvqri58" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m15.png" />
+<img alt="" class="xm-img section08_img lazy" data-id="2vafvqri58" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m15.png"/>
 </div>
 
-<div class="section section09 lazy" data-type="bg" data-id="kklbxufgs4" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m16.png">
+<div class="section section09 lazy" data-type="bg" data-id="kklbxufgs4"  style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m16.png)">
 <div class="section09_text">
 <span data-key="overview_31" class="xm-text overview_31 f72 f-bold" data-type="text" data-id="62wkkld2zu">MediaTek Helio G25</span>
 <span data-key="overview_32" class="xm-text overview_32 f72 f-bold" data-type="text" data-id="8cwl1ncjdz">Processador Octa-core</span>
@@ -148,7 +146,7 @@ data-background-image="">
 </div>
 </div>
 
-<div class="section section10 lazy" data-type="bg" data-id="9lt1997z90" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m17.png">
+<div class="section section10 lazy" data-type="bg" data-id="9lt1997z90" style="background-image:url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m17.png)">
 <div class="section10_text">
 <span data-key="overview_34" class="xm-text overview_34 f72 f-bold" data-type="text" data-id="fbkyg65q07">Poderoso alto-falante</span>
 <span data-key="overview_35" class="xm-text overview_35 f40 f-light" data-type="text" data-id="uxdv1p4s2n">Assista seus vídeos favoritos e ouça as suas playlists com um poderoso sistema de alto-falante que proporciona sonoridades vibrantes e envolventes.</span>
@@ -161,10 +159,10 @@ data-background-image="">
 <span data-key="overview_37" class="xm-text overview_37 f40 f-light" data-type="text" data-id="63our3pas4">Acabou o armazenamento? O Redmi 10A vem com um slot dedicado para cartão microSD que suporta até 1 TB de armazenamento adicional, armazene suas fotos e vídeos com facilidade.</span>
 </div>
 
-<img alt="" class="xm-img section11img lazy" data-id="wpi9myri0q" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m18.png" />
+<img alt="" class="xm-img section11img lazy" data-id="wpi9myri0q" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m18.png"/>
 </div>
 
-<div class="section section12 lazy" data-type="bg" data-id="hruwqh44gu" data-background-image="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m19.png">
+<div class="section section12 lazy" data-type="bg" data-id="hruwqh44gu"  style="background-image: url(//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m19.png)">
 <div class="section12_text">
 <span data-key="overview_38" class="xm-text overview_38 f72 f-bold" data-type="text" data-id="i5hz3qfoe4">Qualidade do produto</span>
 <span data-key="overview_39" class="xm-text overview_39 f40 f-light" data-type="text" data-id="n04j5z65hj">Nossos smartphones passam por testes rigorosos para oferecem a melhor qualidade para você</span>
@@ -185,7 +183,6 @@ data-background-image="">
 <span data-key="overview_44" class="xm-text overview_44 f50 f-bold" data-type="text" data-id="z8m3fmwkax">300 vezes</span>
 <span data-key="overview_45" class="xm-text overview_45 f36 f-light" data-type="text" data-id="1n8sl1bycz">Teste de rolagem de tela</span>
 </div>
-
 
 <div>
 <span data-key="overview_46" class="xm-text overview_46 f50 f-bold" data-type="text" data-id="4zfi2lq9kl">70kg</span>
@@ -210,31 +207,33 @@ Amor à primeira vista</span>
 
 <div data-index="0" class="slick-slide slick-active slick-current" tabindex="-1" aria-hidden="false" style="outline:none;width:14.285714285714286%">
 <div>
-<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m04.png" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
+<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m04.png" alt="" tabindex="-1" style="width:100%;display:inline-block"/></div>
 </div>
 
 <div data-index="1" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline:none;width:14.285714285714286%">
 <div>
-<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m06.png" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
+<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m06.png" alt="" tabindex="-1" style="width:100%;display:inline-block"/></div>
 </div>
 
 <div data-index="2" class="slick-slide" tabindex="-1" aria-hidden="true" style="outline:none;width:14.285714285714286%">
 <div>
-<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m07.png" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
+<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m07.png" alt="" tabindex="-1" style="width:100%;display:inline-block"/></div>
 </div>
 
 <div data-index="3" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true" style="width:14.285714285714286%">
 <div>
-<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m04.png" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
+<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m04.png" alt="" tabindex="-1" style="width:100%;display:inline-block"/></div>
 </div>
 
 <div data-index="4" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true" style="width:14.285714285714286%">
 <div>
-<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m06.png" alt="" tabindex="-1" style="width:100%;display:inline-block" />
+<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m06.png" alt="" tabindex="-1" style="width:100%;display:inline-block"/>
 </div>
 </div>
 <div data-index="5" tabindex="-1" class="slick-slide slick-cloned" aria-hidden="true" style="width:14.285714285714286%">
-<div><img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m07.png" alt="" tabindex="-1" style="width:100%;display:inline-block" /></div>
+<div>
+<img class="lazy" src="//i02.appmifile.com//mi-com-product/images/redmi-10a/m/m07.png" alt="" tabindex="-1" style="width:100%;display:inline-block"/>
+</div>
 </div>
 </div>
 </div>
